#1: Add coverage assets to ci

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Zip App Assets
         run: |
           cd app
-          zip -r build.zip ./build
+          zip -r build.zip ./dist
           zip -r coverage.zip ./coverage
       - name: Create prod release
         if: github.event_name == 'push'
