--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,6 +44,36 @@ jobs:
         run: |
           zip -r build.zip ./dist
           zip -r coverage.zip ./coverage
+          mkdir asset_artifacts
+          mv build.zip asset_artifacts
+          mv coverage.zip asset_artifacts
+      - name: Upload Asset Artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: assets-artifacts
+          path: asset_artifacts
+  release:
+    needs: [fetest]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Cache Dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      - name: Use NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: "18.4.0"
+      - name: Install root
+        run: npm install
+      - name: Download Asset Artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: assets-artifacts
       - name: Create prod release
         if: github.event_name == 'push'
         run: npx semantic-release
