--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "@semantic-release/exec": "^6.0.3",
     "@vue/cli-plugin-babel": "~4.5.15",
     "@vue/cli-plugin-eslint": "~4.5.15",
     "@vue/cli-plugin-unit-jest": "~4.5.15",
